--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Weather App</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -22,7 +22,7 @@
                     </small>
                 </div>
                 <div class="weather">
-                    <img src="" class="icon"  alt="icon" width="50" height="50"/>
+                    <img src="./icons/cloudy.svg" class="icon"  alt="icon" width="50" height="50"/>
                     <span class="condition">Cloudy</span>
                 </div>
             </div>
@@ -33,7 +33,7 @@
                 <input type="text" class="search" placeholder="Search Location..."/>
                 <button type="submit" class="submit">
                     <i class="search-icon">
-                        <img src="./icons/search_FILL0_wght400_GRAD0_opsz48.svg" alt="search-icon">
+                        <img src="./icons/search.svg" alt="search-icon">
                     </i>
                 </button>
             </form>
