--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                     <h1 class="name">London</h1>
                     <small>
                         <span class="time">06:09</span>
+                        -
                         <span class="date">Monday Sep 19</span>
                     </small>
                 </div>
@@ -26,10 +27,9 @@
                     <span class="condition">Cloudy</span>
                 </div>
             </div>
-
         </div>
         <div class="panel">
-            <form action="" class="location-input">
+            <form  id="locationInput">
                 <input type="text" class="search" placeholder="Search Location..."/>
                 <button type="submit" class="submit">
                     <i class="search-icon">
@@ -47,7 +47,7 @@
                 <h4>Weather Details</h4>
                 <li>
                     <span>Cloudy</span>
-                    <span class="cloudy">64%</span>
+                    <span class="cloud">64%</span>
                 </li>
                 <li>
                     <span>Humidity</span>
